# openblahaj

./: .gitignore  Containerfile  LICENSE.txt  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
.gitea/workflows/: build.yaml
.github/workflows/: build.yaml
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.3  traces.4
build-aux/: config.h.in
doc_generation/: Doxyfile.in
include/: openblahaj.h
include/application/: application.h  bootp.h  dhcp.h  dns.h  ftp.h  http.h  http3.h  imap.h  mqtt.h  ntp.h  pop.h  quic.h  rip.h  ripng.h  smtp.h  ssdp.h  syslog.h  telnet.h  tls.h  whois.h  wireguard.h
include/generic/: binary.h  bytes.h  constants.h  dash.h  guid.h  protocol.h  terminal.h  thread.h  time.h
include/hooks/: openssl.h  printbuf.h  socket.h  stdio.h
include/link/: bluetooth.h  cooked.h  dbus.h  eth.h  link.h  ppp.h  pppoe.h  radiotap.h
include/network/: arp.h  ip.h  ip4.h  ip6.h  network.h
include/transport/: icmp.h  icmp6.h  igmp.h  ospf.h  sctp.h  tcp.h  transport.h  udp.h
src/: Makefile.am  Makefile.in  main.c  openblahaj.c
src/application/: application.c  bootp.c  dhcp.c  dns.c  ftp.c  http.c  http3.c  imap.c  mqtt.c  ntp.c  pop.c  quic.c  rip.c  ripng.c  smtp.c  ssdp.c  syslog.c  telnet.c  tls.c  whois.c  wireguard.c
src/generic/: binary.c  bytes.c  dash.c  guid.c  protocol.c  terminal.c  thread.c  time.c
src/hooks/: nspr.c  openssl.c  printbuf.c  quiche.c  socket.c
src/link/: bluetooth.c  cooked.c  dbus.c  eth.c  link.c  ppp.c  pppoe.c  radiotap.c
src/network/: arp.c  ip.c  ip4.c  ip6.c  network.c
src/transport/: icmp.c  icmp6.c  igmp.c  ospf.c  sctp.c  tcp.c  transport.c  udp.c
static_doc/: Container.md  IANA useful links.txt  service-names-port-numbers.csv
tests/: Makefile.am  Makefile.in  capture.test.in  commandline1.ftest.in  commandline2.stest.in  empty.cap.in
tests/captures/: BT_USB_LinCooked_Eth_80211_RT.beheaded.ntar  DNS.pcapng  FTP.cap  IPv6_Extensions.cap  MQTT.cap  MQTT2.cap  NTP.pcap  NtpCtrlResponse.cap  OSPF2.cap  OSPF3.cap  POP3.cap  SCTP_HTTP.bak.cap  SSDP.cap  Whois.cap  http2.pcapng  my_curl.pcapng  ntp-auth.pcapng  ntp-control.pcapng  ntp.pcapng  ntp_control_message.pcapng  ntp_ref_src_undefined.pcap
